# sqlx-postgres-test-connection

./: Cargo.toml  README.md
.github/workflows/: rust.yml  sqlx-postgres-test-connection.yml
src/: lib.rs
tests/: migration_test.rs
tests/migrations/: 20210512095148_first.up.sql  20210512095152_second.down.sql  20210512095152_second.up.sql
tide-sqlx-test-connection/: Cargo.toml
tide-sqlx-test-connection/src/: lib.rs
tide-sqlx-test-connection/tests/: tide_sqlx_test.rs
