[package]
name = "sqlx-postgres-test-connection"
description = "Postgres test helper connection for sqlx. Inspired by https://github.com/spoqa/ormeasy"
version = "0.1.0"
authors = ["Spoqa Creators <dev@spoqa.com>"]
edition = "2018"
homepage = "https://github.com/spoqa/sqlx-postgres-test-connection"
repository = "https://github.com/spoqa/sqlx-postgres-test-connection"
readme = "README.md"
license = "MIT"

[features]
runtime-async-std-native-tls = [
    "sqlx-core/runtime-async-std-native-tls",
    "sqlx-rt/runtime-async-std-native-tls",
]
runtime-tokio-native-tls = [
    "sqlx-core/runtime-tokio-native-tls",
    "sqlx-rt/runtime-tokio-native-tls",
]
runtime-actix-native-tls = [
    "sqlx-core/runtime-actix-native-tls",
    "sqlx-rt/runtime-actix-native-tls",
]

runtime-async-std-rustls = [
    "sqlx-core/runtime-async-std-rustls",
    "sqlx-rt/runtime-async-std-rustls",
]
runtime-tokio-rustls = [
    "sqlx-core/runtime-tokio-rustls",
    "sqlx-rt/runtime-tokio-rustls",
]
runtime-actix-rustls = [
    "sqlx-core/runtime-actix-rustls",
    "sqlx-rt/runtime-actix-rustls",
]

[dependencies]
sqlx-core = { version = "0.5.5", default-features = false, features = ["migrate", "postgres"] }
sqlx-rt = "0.5.5"

[dev-dependencies]
anyhow = "1.0.41"
dotenv = "0.15.0"
futures-util = "0.3.15"
sqlx-macros = { version = "0.5.5", default-features = false, features = ["migrate"] }
