[package]
name = "tide-sqlx-test-connection"
description = "Database test helper for tide-sqlx. Inspired by https://github.com/spoqa/ormeasy"
version = "0.1.0"
authors = ["Spoqa Creators <dev@spoqa.com>"]
edition = "2018"
homepage = "https://github.com/spoqa/sqlx-test-connection"
repository = "https://github.com/spoqa/sqlx-test-connection"
license = "MIT"

[features]
native-tls = ["sqlx/runtime-async-std-native-tls"]
rustls = ["sqlx/runtime-async-std-rustls"]

[dependencies]
async-std = { version = "1.9.0", default-features = false }
async-trait = "0.1.50"
sqlx = { version = "0.5.2", default-features = false, features = ["migrate"] }
sqlx-test-connection = { path = ".." }
tide = { version = "0.16.0", default-features = false }
tide-sqlx = "0.6.1"

[dev-dependencies]
async-std = { version = "1.9.0", default-features = false, features = ["attributes"] }
dotenv = "0.15.0"
serial_test = "0.5.1"
sqlx = { version = "0.5.2", features = ["postgres"] }
tide-testing = "0.1.3"
